--- a/LoremSharp/LoremSharp.csproj
+++ b/LoremSharp/LoremSharp.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
       <TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
+      <Authors>Anthony Foxclaw, AJ Hoffer</Authors>
+      <Description>A .NET library for all things random!</Description>
   </PropertyGroup>
 
 </Project>
